# BattleShip

./: CMakeLists.txt  README.md
include/: ComputerPlayer.h  GameLogic.h  Greedy.h  Grid.h  GridDisplay.h  HumanPlayer.h  HumanUI.h  MultipleFunnel.h  Player.h  Random.h  Segment.h  Ship.h  SingleFunnel.h  Square.h  Strategy.h  functions.h
src/: ComputerPlayer.cpp  GameLogic.cpp  Greedy.cpp  Grid.cpp  GridDisplay.cpp  HumanPlayer.cpp  HumanUI.cpp  MultipleFunnel.cpp  Player.cpp  Random.cpp  Segment.cpp  Ship.cpp  SingleFunnel.cpp  Square.cpp  Strategy.cpp  functions.cpp  main.cpp
test/: ComputerStrategyTest.cpp  GridTest.cpp  SingleFunnelTest.cpp  config.cpp
